gfch100: fix missing header on narrow browser
	* not sure why this was in there, but made it smaller
	* b/29420315

--- a/craftui/www/static/default.css
+++ b/craftui/www/static/default.css
@@ -472,7 +472,7 @@
 
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 300px) {
 
   html,
   body,
